# heyanlin

./: .gitignore
.github/workflows/: build-and-release.yml
table-comparison/: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
table-comparison/scripts/: build_exe.ps1
删除重复项自动化/: .gitignore  DeleteDuplicateRows.bas  README.md  过程文件.xlsm
删除重复项自动化/加载宏文件xlam/: 删除重复项自动化250604.xlam  删除重复项自动化250605.xlam  删除重复项自动化260604.xlam  删除重复项自动化260605.xlam
删除重复项自动化/测试数据/: 有重复项的-测试文件.xlsx  没有重复项的-基准结果文件.xlsx
提取税率自动化/: .gitignore  ExtractTaxRate.bas  README.md  过程文件.xlsm
提取税率自动化/加载宏文件xlam/: 提取税率自动化260615.xlam  提取税率自动化260616.xlam
