[project]
name = "table-comparison"
version = "2.2.4"
description = "A polished Python GUI tool for comparing Excel files and highlighting differences."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tobin" }]
license = { file = "LICENSE" }
dependencies = [
    "customtkinter>=5.2.1",
    "openpyxl>=3.1.2",
    "Pillow>=10.0",
    "ttkbootstrap>=1.10.1",
]

[project.urls]
Homepage = "https://github.com/caifugao110/heyanlin/tree/master/table-comparison"
Repository = "https://github.com/caifugao110/heyanlin/tree/master/table-comparison"

[project.scripts]
table-comparison = "app:main"

[tool.setuptools]
py-modules = ["app"]
